...
        <Button
          className="h-[52px] w-full rounded-full bg-primary-foreground data-[hover=true]:bg-primary-foreground data-[active=true]:bg-primary-foreground"
          onPress={onNext}
          size="lg"
        >
          <ButtonText className="font-inter-semibold text-[15px] text-primary data-[hover=true]:text-primary data-[active=true]:text-primary">
            Get started
          </ButtonText>
        </Button>
      </View>
    </View>
  );
}
...
