appId: com.ellvate.app
tags:
  - full
---
- runFlow: ../../subflows/launch-demo-authenticated.yaml
- tapOn: "Events"
- assertVisible: "Events"
- tapOn: "Missions"
- assertVisible: "Missions"
- tapOn: "Services"
- assertVisible: "Services"
- tapOn: "Forum"
- assertVisible: "Forum"
